<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmailContacter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="data_a">data a: </string>
    <string name="data_b">data b: </string>
    <string name="latitude">latitude: </string>
    <string name="longtitude">longtitude: </string>
    <string name="locate">locate</string>
    <string name="send_email">send email</string>
    <string name="zero">0</string>
    <string name="save">save</string>

</resources>
